--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@
 /public/ng2-charts
 /public/rxjs
 /public/systemjs
+/public/jquery-ui-dist
+/public/gridstack
+/public/bootstrap
+/public/jquery
+/public/chart.js
 
 /vendor
 /.idea
