--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.6.23",
+    "font-awesome": "^4.7.0",
+    "d3-flame-graph": "0.4.2",
+    "gridstack": "0.2.6",
+    "jquery-ui-dist": "1.12.1",
+    "d3-tip": "0.7.1"
   },
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
